2011-01-13 Németh László <nemeth at OOo>:
        * affixmgr.cxx: ONLYINCOMPOUND fix for hun#2999224 (fogemorphene
          was allowed in end position of compoundings). Reported by Ruud Baars.
        * tests/onlyincompound2.*: test files

2011-01-10 Ingo H. de Boer <idb_winshell at SF.net>:
	* win_api/{hunspell,libhunspell, testparser}.vcproj: updated project
	  files for the library and the executables. Compiling problem
	  also reported by Don Walker.

2011-01-06 Németh László <nemeth at OOo>:
        * affixmgr.cxx: fix freedesktop#32850 (program halt during Hungarian
          spell checking of the word "6csillagocska6", reported by András Tímár)

        * tools/hunspell.cxx: add Mac OS X Hunspell dictionary paths, asked by
          Vidar Gundersen in hunfeat#3142010

2011-01-05 Caolán McNamara <cmc at OOo>:
	* moz#620626 NS_UNICHARUTIL_CID doesn't support
	  case conversion

2011-01-03 Németh László <nemeth at OOo>:
	* NEWS and THANKS: update for release 1.2.13

2010-12-20 Németh László <nemeth at OOo>:
        * affixmgr.cxx: hun#3140784

2010-12-16 Németh László <nemeth at OOo>:
        * affixmgr.cxx: 
        - improved fix of hun#2970242 (supporting
          zero affixes, reported by Ruud Baars
        - tests/opentaal_cpdpat{,2}: test files

        - switching off default BREAK parameters by BREAK 0,
          reported by Ruud Baars

        - hun#2999225, reported by Ruud Baars

2010-12-11 Németh László <nemeth at OOo>:
        * affixmgr.cxx: fix hun#2970242 (CHECKCOMPOUNDPATTERN only with flags),
          the bug reported by Ruud Baars
        * tests/2970242.*: test files

        * tests/2970240.*: test files for CHECKCOMPOUNDPATTERN fix (check all
          boundaries in compound words, fixed by the previous CHECKCOMPOUNDREP
          fix), the bug reported by Ruud Baars

        * win_api/Makefile.cygwin: update

2010-12-09 Caolán McNamara <cmc at OOo>:
	* moz#617953 fix leak

2010-11-08 Caolán McNamara <cmc at OOo>: